--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container hero-container">
-            <div class="hero-image">
-                <img src="assets/hero-image.jpg" alt="Students at IKHAT">
+            <div class="Students at IKHAT">
+                <img src="assets/Students at IKHAT.png" alt="Students at IKHAT">
             </div>
             <div class="hero-content">
                 <h1 class="hero-title">Preserving Heritage Through Education and Wellness</h1>
