--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="section-content">
                     <div class="philosophy-icons">
                         <div class="philosophy-item">
-                            <img src="assets/heritage-icon.png" alt="Heritage Icon">
+                            <img src="assets/Heritage Graphic.png" alt="Heritage Icon">
                             <h3>Heritage</h3>
                         </div>
                         <div class="philosophy-item">
