--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
                             <h3>Heritage</h3>
                         </div>
                         <div class="philosophy-item">
-                            <img src="assets/lifeskills-icon.png" alt="Life-skills Icon">
+                            <img src="assets/Life Skills Graphic.png" alt="Life-skills Icon">
                             <h3>Life-skills</h3>
                         </div>
                         <div class="philosophy-item">
-                            <img src="assets/wellbeing-icon.png" alt="Well-being Icon">
+                            <img src="assets/Well Being Graphic.png" alt="Well-being Icon">
                             <h3>Well-being</h3>
                         </div>
                     </div>
