--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="container nav-container">
             <div class="logo-circle">
-                <img src="assets/logo.png" alt="IKHAT Logo" class="logo">
+                <img src="assets/Logo.png" alt="IKHAT Logo" class="logo">
             </div>
             <button class="mobile-menu-toggle" aria-label="Toggle menu" aria-expanded="false">
                 <span></span>
@@ -206,7 +206,7 @@
     <footer>
         <div class="container footer-container">
             <div class="footer-logo">
-                <img src="assets/logo.png" alt="IKHAT Logo">
+                <img src="assets/Logo.png" alt="IKHAT Logo">
             </div>
             <div class="footer-image">
                 <img src="assets/footer-image.png" alt="Footer Illustration">
