--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="container nav-container">
             <div class="logo-circle">
-                <img src="assets/Logo.png" alt="IKHAT Logo" class="logo">
+                <img src="assets/Text and Logo.png" alt="IKHAT Logo" class="logo">
             </div>
             <button class="mobile-menu-toggle" aria-label="Toggle menu" aria-expanded="false">
                 <span></span>
